# Atlantic-ADSHADE-Peace

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  next.config.js  package.json
components/: Overlay.js
contract/: Cargo.toml
contract/src/: collateral.rs  ecdsa.rs  external.rs  lib.rs  utils.rs
pages/: _app.js  index.js
pages/api/: derive.js  hello.js  isVerified.js  quote.js  refund.js  register.js  search.js  test.js  verify.js
pages/api/utils/: collateral.js  near-provider.js
styles/: Home.module.css
temp/: agentHelpers.cjs  index.cjs  kdf.cjs  nearProvider.cjs  tappd.cjs  twitter.cjs
tests/: sample.js  test.js
utils/: auth.js  auth2.js  deploy.js  ethereum.ts  evm.ts  kdf.js  mainnet.js  near-provider.js  non-cust.js  tappd.ts  twitter-client.js  utils.js
